--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/erskine-profile-pic.png" alt="Erskine Duenas profile picture" />
+        <img
+          src="./assets/erskine-profile-pic.png"
+          alt="Erskine Duenas profile picture"
+        />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -47,7 +50,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/erskine_resume.pdf')"
           >
             Download CV
           </button>
@@ -60,13 +63,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://www.linkedin.com/in/erskine-duenas'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https:github.com/laharl143'"
           />
         </div>
       </div>
@@ -91,7 +94,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Full  Development</p>
+              <p>2+ years <br />Full Development</p>
             </div>
             <div class="details-container">
               <img
@@ -100,12 +103,20 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.S. Electronics and Communication Engineering<br /><span></span></p>
+              <p>
+                B.S. Electronics and Communication Engineering<br /><span></span>
+              </p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              I view myself as a "lifelong learner," eager to deepen my understanding of technological advancements and stay updated with the latest technologies. I'm keen on embracing discomfort and regularly learning something new. This is my approach to lifelong learning and growth. My core skill is based on JavaScript and I love to do most of the things using JavaScript. I am available for any kind of job opportunity that suits my skills and interests.
+              I am a developer with 2 years of professional experience as a
+              Full-Stack Software Engineer, specializing in Back-End
+              Development. I am a quick learner with a self-learning attitude. I
+              view myself as a "lifelong learner," eager to deepen my
+              understanding of technological advancements and stay updated with
+              the latest technologies. I'm keen on embracing discomfort and
+              regularly learning something new.
             </p>
           </div>
         </div>
@@ -123,7 +134,7 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Programming / Frameworks</h2>
             <div class="article-container">
               <article>
                 <img
@@ -132,30 +143,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML</h3>
+                  <h3>Java</h3>
                   <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>CSS</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>SASS</h3>
-                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -166,7 +155,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -177,6 +166,19 @@
                 />
                 <div>
                   <h3>TypeScript</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>
+                    Python&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  </h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -187,14 +189,62 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Material UI</h3>
-                  <p>Intermediate</p>
+                  <h3>React.js&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Express.js&nbsp;&nbsp;&nbsp;</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Spring Boot</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>
+                    Vue.js&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  </h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>
+                    Jest&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  </h3>
+                  <p>Experienced</p>
                 </div>
               </article>
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Backend Development</h2>
+            <h2 class="experience-sub-title">DevOps</h2>
             <div class="article-container">
               <article>
                 <img
@@ -203,7 +253,9 @@
                   class="icon"
                 />
                 <div>
-                  <h3>PostgreSQL</h3>
+                  <h3>
+                    Docker&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  </h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -214,8 +266,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Node JS</h3>
-                  <p>Intermediate</p>
+                  <h3>Kubernetes</h3>
+                  <p>Basic</p>
                 </div>
               </article>
               <article>
@@ -225,8 +277,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Express JS</h3>
-                  <p>Intermediate</p>
+                  <h3>Jenkins&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -236,8 +288,10 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Git</h3>
-                  <p>Intermediate</p>
+                  <h3>
+                    AWS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  </h3>
+                  <p>Basic</p>
                 </div>
               </article>
             </div>
@@ -347,7 +401,11 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p>
+            <a href="mailto:erskine.duenas@gmail.com"
+              >erskine.duenas@gmail.com</a
+            >
+          </p>
         </div>
         <div class="contact-info-container">
           <img
@@ -355,7 +413,9 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p>
+            <a href="https://www.linkedin.com/in/erskine-duenas">LinkedIn</a>
+          </p>
         </div>
       </div>
     </section>
@@ -370,7 +430,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 Erskine Duenas. All Rights Reserved.</p>
+      <p>Copyright &#169; 2025 Erskine Duenas. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
