--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Full Development</p>
+              <p>2+ years <br />Full Stack Development</p>
             </div>
             <div class="details-container">
               <img
@@ -110,7 +110,7 @@
           </div>
           <div class="text-container">
             <p>
-              I am a developer with 2 years of professional experience as a
+              I am a developer with 2 years plus of professional experience as a
               Full-Stack Software Engineer, specializing in Back-End
               Development. I am a quick learner with a self-learning attitude. I
               view myself as a "lifelong learner," eager to deepen my
